docs/sf-export/sfdx-raw/objects/Debit_Schedule__c/Debit_Schedule__c.object-meta.xml
<CustomObject>
    <description>DEBIT SCHEDULE AUTHORIZATION USED IN SAS TRUST ACCOUNTING AGREEMENT AND DISCLOSURE STATEMENT</description>
    <label>Debit Schedule</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Debit Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>