docs/sf-export/sfdx-raw/objects/Debit_Schedule__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>Unique draft amount from the draft records under the parent program plan</description>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>