docs/sf-export/sfdx-raw/objects/Debit_Schedule__c/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <description>Count of number of draft payments having the unique amount</description>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>