docs/sf-export/sfdx-raw/objects/Debit_Schedule__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>Program_Plan__c</referenceTo>
    <relationshipLabel>Debit Schedules</relationshipLabel>
    <relationshipName>Debit_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>