docs/sf-export/sfdx-raw/objects/Debit_Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First draft date of the unique draft amount</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>